--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "react": "^15.0.1",
+    "react-datepicker": "^0.25.0",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
